--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,11 +3,15 @@
   justify-content: center;
   align-items: center;
   &-form {
-    width: 300px;
+    width: 500px;
     padding: 50px 40px 10px;
     border-radius: 10px;
+    z-index: 1;
+    background-color: #FFF;
+    border: 1px solid #fff;
     h2 {
       text-align: center;
+      color: #666;
     }
     &_button {
       width: 100%;
